--- a/Darstellungsregeln/Experimentell1.css
+++ b/Darstellungsregeln/Experimentell1.css
@@ -1,6 +1,6 @@
     @font-face {
       font-family: 'Londrina Outline';
-      src: url('https://Lernprojekte.github.io/Schriftarten/LondrinaOutline-Regular.ttf') format('truetype');
+      src: url('../Schriftarten/LondrinaOutline-Regular.ttf') format('truetype');
     }
 
     body {
