--- a/Darstellungsregeln/Experimentell1.css
+++ b/Darstellungsregeln/Experimentell1.css
@@ -1,6 +1,8 @@
     @font-face {
       font-family: 'Londrina Outline';
-      src: url('../Schriftarten/LondrinaOutline-Regular.ttf') format('truetype');
+      src: url('https://github.com/marcelommp/Londrina-Typeface/raw/master/OTF/LondrinaOutline-Regular.otf') format('otf');
+      font-weight: normal;
+      font-style: normal;
     }
 
     body {
