--- a/Darstellungsregeln/Experimentell1.css
+++ b/Darstellungsregeln/Experimentell1.css
@@ -1,6 +1,6 @@
     @font-face {
       font-family: 'Londrina Outline';
-      src: url('https://github.com/marcelommp/Londrina-Typeface/raw/master/OTF/LondrinaOutline-Regular.otf') format('otf');
+      src: url('https://github.com/marcelommp/Londrina-Typeface/raw/master/OTF/LondrinaOutline-Regular.otf') format('opentype');
       font-weight: normal;
       font-style: normal;
     }
