--- a/Darstellungsregeln/Experimentell1.css
+++ b/Darstellungsregeln/Experimentell1.css
@@ -1,6 +1,6 @@
     @font-face {
       font-family: 'Londrina Outline';
-      src: url('https://github.com/marcelommp/Londrina-Typeface/raw/master/OTF/LondrinaOutline-Regular.otf') format('opentype');
+      src: url('https://lernprojekte.github.io/Schriftarten/LondrinaOutline-Regular.ttf') format('truetype');
       font-weight: normal;
       font-style: normal;
     }
