--- a/Darstellungsregeln/Experimentell1.css
+++ b/Darstellungsregeln/Experimentell1.css
@@ -1,18 +1,20 @@
-    @font-face {
-      font-family: 'Londrina Outline';
-      src: url('https://lernprojekte.github.io/Schriftarten/LondrinaOutline-Regular.ttf') format('truetype');
-      font-weight: normal;
-      font-style: normal;
-    }
+@font-face {
+  font-family: 'Londrina Outline';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://Lernprojekte.github.io/Schriftarten/londrina-outline.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 
-    body {
-      max-width: 600px; /* Maximale Breite des Inhalts */
-      margin: 0 auto; /* Zentriert den Inhalt horizontal */
-      padding: 20px; /* Fügt Abstand zwischen dem Inhalt und dem Rand hinzu */
-      background-color: #000000;
-      color: #ddbb88;
-    }
+body {
+  max-width: 600px; /* Maximale Breite des Inhalts */
+  margin: 0 auto; /* Zentriert den Inhalt horizontal */
+  padding: 20px; /* Fügt Abstand zwischen dem Inhalt und dem Rand hinzu */
+  background-color: #000000;
+  color: #ddbb88;
+}
 
-    h1, h2, h3 {
-      font-family: 'Londrina Outline', sans-serif;
-    }
+h1, h2, h3 {
+  font-family: 'Londrina Outline', sans-serif;
+}
