--- a/Darstellungsregeln/Experimentell1.css
+++ b/Darstellungsregeln/Experimentell1.css
@@ -9,7 +9,7 @@
 
 @font-face {
   font-family: 'Dongle Light';
-  font-style: normal;
+  font-style: light;
   font-weight: 300;
   font-display: swap;
   src: url(https://Lernprojekte.github.io/Schriftarten/Dongle-Light.ttf) format('ttf');
