--- a/Darstellungsregeln/Experimentell1.css
+++ b/Darstellungsregeln/Experimentell1.css
@@ -13,7 +13,7 @@ body {
   padding: 20px; /* Fügt Abstand zwischen dem Inhalt und dem Rand hinzu */
   background-color: #000000;
   color: #ddbb88;
-  font-family: 'Dongle Light', sans-serif;
+  font-family: 'Dongle', sans-serif;
 }
 
 h1, h2, h3 {
