--- a/Darstellungsregeln/Experimentell1.css
+++ b/Darstellungsregeln/Experimentell1.css
@@ -22,7 +22,7 @@ body {
   padding: 20px; /* Fügt Abstand zwischen dem Inhalt und dem Rand hinzu */
   background-color: #000000;
   color: #ddbb88;
-  font-family: 'Kavivanar', cursive;
+  font-family: 'Kavivanar'; /*, cursive;*/
 }
 
 h1, h2, h3 {
