--- a/Darstellungsregeln/Lernprojekte.github.io.css
+++ b/Darstellungsregeln/Lernprojekte.github.io.css
@@ -1,1 +1,5 @@
-
+body {
+  max-width: 600px; /* Maximale Breite des Inhalts */
+  margin: 0 auto; /* Zentriert den Inhalt horizontal */
+  padding: 20px; /* Fügt Abstand zwischen dem Inhalt und dem Rand hinzu */
+}
