--- a/Darstellungsregeln/_Medium_Bildschirm_kw.css
+++ b/Darstellungsregeln/_Medium_Bildschirm_kw.css
@@ -1,1 +1,11 @@
+/* Darstellungsregeln für große Bildschirme                          */
+@media screen and (max-width: 767px) and (orientation: landscape) {
+  /* CSS-Regeln für Desktop-Ansicht hier */
+  h1, h2, h3 {
+    color: #bb88dd;
+  }
+}
 
+
+
+/* ~ ~ ~~ ~~~ ~~~~~ ~~~~~~~~ ~~~~~~~~~~~~~ ~~~~~~~~ ~~~~~ ~~~ ~~ ~ ~ */
