--- a/Darstellungsregeln/Medium_Bildschirm_ks.css
+++ b/Darstellungsregeln/Medium_Bildschirm_ks.css
@@ -1,5 +1,8 @@
 /* Darstellungsregeln für große Bildschirme                              */
-@media screen and (max-width: 767px) and (orientation: portrait) {
+@media screen
+and (max-width: 511px)
+and (max-height: 959px)
+and (orientation: portrait) {
   /* CSS-Regeln für Desktop-Ansicht hier */
   h1, h2, h3 {
     color: #dd88bb;
