--- a/Darstellungsregeln/Medium_Bildschirm_kw.css
+++ b/Darstellungsregeln/Medium_Bildschirm_kw.css
@@ -1,4 +1,4 @@
-/* Darstellungsregeln für große Bildschirme                              */
+/* Darstellungsregeln für kleine, waagerechte Bildschirme                */
 @media screen
 and (max-width: 959px)
 and (max-height: 511px)
