--- a/Darstellungsregeln/Medium_Bildschirm_gw.css
+++ b/Darstellungsregeln/Medium_Bildschirm_gw.css
@@ -1,5 +1,7 @@
-/* Darstellungsregeln für große Bildschirme                              */
-@media screen and (min-width: 768px) and (orientation: landscape) {
+/* Darstellungsregeln für große, waagerechte Anzeigen                    */
+@media screen
+and (min-width: 960px)
+and (orientation: landscape) {
   /* CSS-Regeln für Desktop-Ansicht hier */
   h1, h2, h3 {
     color: #88ddbb;
