--- a/Darstellungsregeln/Medium_Bildschirm_gw.css
+++ b/Darstellungsregeln/Medium_Bildschirm_gw.css
@@ -1,6 +1,6 @@
 /* Darstellungsregeln für große, waagerechte Anzeigen                    */
 @media screen
-and (min-height: 512px)
+and (min-width: 960px)
 and (orientation: landscape) {
   /* CSS-Regeln für Desktop-Ansicht hier */
   h1, h2, h3 {
