--- a/Darstellungsregeln/Medium_Drucker.css
+++ b/Darstellungsregeln/Medium_Drucker.css
@@ -17,10 +17,15 @@
         
   }
 
-  body {
+  * {
     background-color: transparent;
-    max-width: 100%;
     color: black;
+  }
+  
+  body {
+    max-width: 100%;
+    max-height: 100%:
+    padding: 0px;
   }
 }
 
