--- a/Darstellungsregeln/Medium_Bildschirm_gw.css
+++ b/Darstellungsregeln/Medium_Bildschirm_gw.css
@@ -3,8 +3,12 @@
 and (min-height: 512px)
 and (orientation: landscape) {
   /* CSS-Regeln für Desktop-Ansicht hier */
-  h1, h2, h3 {
-
+body {
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 150px;
+    margin-bottom: 150px;
   }
 }
 
